added past visuals on Nutrition page
